--- a/.github/workflows/deploy-github-pages.yaml
+++ b/.github/workflows/deploy-github-pages.yaml
@@ -5,7 +5,7 @@ on:
   # Event for the workflow to run on
   push:
     branches:
-      - "main"
+      - "gh-pages"
 
 permissions:
   contents: read
